deployments/cherrypy-secret-roles/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: secret-roles-service
  namespace: secret-roles
spec:
  type: ClusterIP
  selector:
    app: secret-roles
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8080
